xpcom/base/nsTraceRefcnt.cpp
@@ -450,6 +450,8 @@ nsTraceRefcnt::DumpStatistics(StatisticsType type, FILE* out)
   nsresult rv = NS_OK;
 #ifdef NS_BUILD_REFCNT_LOGGING
   if (gBloatLog == nsnull || gBloatView == nsnull) {
+    fprintf(stdout, "Must define environmental variable " \
+            "XPCOM_MEM_BLOAT_LOG\n");
     return NS_ERROR_FAILURE;
   }
   if (out == nsnull) {
@@ -485,7 +487,8 @@ nsTraceRefcnt::DumpStatistics(StatisticsType type, FILE* out)
     nsVoidArray entries;
     PL_HashTableEnumerateEntries(gBloatView, BloatEntry::DumpEntry, &entries);
 
-    printf("nsTraceRefcnt::DumpStatistics: %d entries\n", entries.Count());
+    fprintf(stdout, "nsTraceRefcnt::DumpStatistics: %d entries\n",
+           entries.Count());
 
     // Sort the entries alphabetically by classname.
     PRInt32 i, j;
